tools/sddl2/assembler/tests/success/math_neg_negative.asm
# Test: math.neg - negate negative number
# Stack: ... I64 → ... I64
push.i32 -50
math.neg
halt
