tools/sddl2/assembler/tests/fail/math_abs_with_param.asm
# EXPECT-ERROR: Unknown instruction or unexpected token
push.i32 -50
math.abs 1
halt
